LPS-77950 Replace height and margins with an absolute position to avoid overlapping

--- a/modules/apps/foundation/frontend-theme/frontend-theme-styled/src/main/resources/META-INF/resources/_styled/css/application/_misc.scss
+++ b/modules/apps/foundation/frontend-theme/frontend-theme-styled/src/main/resources/META-INF/resources/_styled/css/application/_misc.scss
@@ -29,8 +29,7 @@
 .lfr-asset-anchor:before {
 	content: "";
 	display: block;
-	height: 64px;
-	margin: -64px 0 0;
+	position: absolute;
 }
 
 .lfr-url-error {
